--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -24,12 +24,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
-@import '~@ctrl/ngx-emoji-mart/picker';
 
 //Global Rules
 .grey-bg {
-  --background: #F6F7FB;
-  background-color: #F6F7FB;
+  --background: #f6f7fb;
+  background-color: #f6f7fb;
 }
 
 .txt-14 {
@@ -58,7 +57,7 @@
 }
 
 .primary-btn {
-  --background: #2038CC;
+  --background: #2038cc;
   --color: #fff;
   font-size: 18px;
   line-height: 25px;
